        - Improved exception/error messages, added exception testing, reduced
          and minimized the number of exceptions actually uncaught
        - Significant POD cleanup
        - 100% rewrite of all test files, and added a slew of new ones, all
          using Test::More
        - Add build requirement of Test::SharedFork to handle the out of
          sequence fork() tests in t/35-clean.t

0.61  Mon Oct  8 00:27:39 2012
        - Added patch from Frank Lichtenheld fixing IPC::Shareable's dependence
          on the presence of a perl bug which is no longer present in
          perl >= 5.10
        - Fixed bug reported by Dan Harbin where the FETCH operation on a tie()d
          string containing HASH, ARRAY, or SCALAR fails because it was using
          the stringification of the data to determine what kind of reference
          it was.  Now using Scalar::Util::reftype
        - Added missing dependency on IPC::Semaphore to Makefile.PL (reported
          by Adrian Issott)
        - Added a 'sleep 1' in a test that was hanging on certain systems
          due (possibly) to two alarm signals coming too quickly to the
          child process.  From Ton Voon.

0.60  Mon Mar  5 15:20:18 EST 2001
        - Lee Lindley (lee.lindley@bigfoot.com) added the _was_changed
          optimization, improved the locking functionality, fixed
          numerous bugs, and generally cleaned things up; thanks.
        - Removed support for "no" as a false value in arguments;
          thanks to Dave Rolsky <autarch@urth.org>

0.54  Mon Jan  8 11:52:28 EST 2001
        - Fix to allow IPC::Shareable to work with 1.0.* versions of
          Storable

0.53  Tue Nov 14 00:33:35 EST 2000
        - Fixed race condition in test suite causing intermitent
          failures.
        - Better checking for success of calls to Storable::thaw();
          thanks to Raphael Manfredi <Raphael_Manfredi@pobox.com>.

0.52  Thu Sep 14 12:30:17 EDT 2000