@@ -33,4 +33,4 @@ build/
 \.bblog$
 \.base$
 main$
-^\.github/
+.github/
